# a76

./: .gitignore  Cargo.toml  PROJECT_NOTES.txt  floating.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: api.ts  floating.tsx  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  error.rs  main.rs  process.rs  scanner.rs  state.rs  sync.rs  types.rs
src/components/: DiffView.tsx  InjectDialog.tsx  ProcessList.tsx  ScanPanel.tsx  ScanResults.tsx  SnapshotList.tsx  SyncSettings.tsx
src/pages/: FloatingPanel.tsx  MainApp.tsx
sync-server/: .env.example  README.md  crypto.js  package.json  server.js
